# kylinguard

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  install.sh  start.bat  start.sh  uninstall.sh
backend/: pyproject.toml
backend/kylinguard/: alert_pusher.py  alert_rules.py  api.py  audit.py  auth.py  authorization.py  command_batch.py  config.py  context_files.py  executor.py  gate.py  intent.py  kylin_profile.py  llm.py  llm_config.py  mcp_client.py  mcp_config.py  models.py  permissions.py  pipeline.py  planner.py  policy.py  registry.py  reviewer.py  rules.py  sanitization.py  security_benchmark.py  sessions.py  skills.py  snapshot.py  storage_security.py  subprocess_env.py
backend/kylinguard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_alert_rules.py  test_api.py  test_audit.py  test_auth.py  test_authorization.py  test_command_batch.py  test_config.py  test_context_files.py  test_deploy_package.py  test_deploy_security.py  test_executor.py  test_extensions_api.py  test_files_plugin.py  test_gate.py  test_intent.py  test_kylin_plugin.py  test_kylin_profile.py  test_llm.py  test_llm_config.py  test_mcp_config.py  test_mcp_integration.py  test_models.py  test_observability_plugins.py  test_permission_api.py  test_permission_pipeline.py  test_permissions.py  test_pipeline.py  test_planner.py  test_plugins.py  test_policy.py  test_privileged_helper.py  test_reviewer.py  test_rules.py  test_sanitization.py  test_security_benchmark.py  (+6 more)
(+106 files in other folders)
