[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kylinguard"
version = "0.1.0"
description = "麒盾 KylinGuard：面向麒麟操作系统的安全智能运维 Agent"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "openai>=1.30",
    "httpx>=0.27",
    "mcp>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
include = ["kylinguard*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
